# activity-platform

./: .gitignore  config.py  database.py  dependencies.py  flash.py  main.py  pyproject.toml  railway.json  render.yaml  requirements.txt  templating.py
doc/: detailed-design.md  prompt.md  proposal.md
doc/tasks/: activity.md  auth.md  comment.md  notification.md  progress.md  project-setup.md  registration.md  reputation.md  scheduler.md  ui-polish.md  user.md
models/: __init__.py  activity.py  comment.py  notification.py  registration.py  user.py
routers/: activities.py  auth.py  comments.py  notifications.py  registrations.py  users.py
services/: activity_service.py  auth_service.py  comment_service.py  email_service.py  notification_service.py  registration_service.py  reputation_service.py  scheduler_service.py  user_service.py
static/js/: main.js
templates/: base.html  error.html  index.html
templates/activities/: create.html  detail.html  edit.html
templates/auth/: login.html  register.html
templates/notifications/: list.html
templates/registrations/: manage.html
templates/users/: profile.html
tests/: conftest.py  test_activity_service.py  test_auth_service.py  test_comment_service.py  test_notification_service.py  test_registration_service.py  test_reputation_service.py  test_scheduler_service.py  test_user_service.py
