[project]
name = "activity-platform"
version = "0.1.0"
description = "活动报名平台 — 活动组织者可以发起活动，用户可以浏览、搜索、报名活动"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "bcrypt>=4.0.0",
    "python-dotenv>=1.0.0",
    "itsdangerous>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "mypy>=1.11.0",
    "ruff>=0.5.0",
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["bcrypt"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*", "routers.*", "main"]
disable_error_code = ["no-untyped-def"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["B008"]  # FastAPI Depends in defaults is idiomatic

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
